--- a/prove/mission/style.css
+++ b/prove/mission/style.css
@@ -1,61 +1,75 @@
+body {
+    margin: 0;
+    font-family: "Times New Roman", serif;
+    font-size: 20px;
+    background: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    padding: 40px 0;
+    line-height: 1.5;
+}
+
+.border {
+    border: 1px solid #ccc;
+    width: 70%;
+    max-width: 600px;
+    background: white;
+    padding: 70px 150px;
+}
+
 .main-title {
     text-align: center;
-    font-weight: lighter;
-    font-size: 45px;
+    font-weight: normal;
+    font-size: 40px;
     margin-bottom: 10px;
-    margin-top: 50px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 .sub-title {
     text-align: center;
     color: #006EB6;
-    font-size: 17px;
+    font-size: 16px;
     letter-spacing: 3px;
     font-weight: lighter;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
+    text-transform: uppercase;
 }
 
 .divider {
-    margin-top: 0;
-    margin-bottom: 40px;
-    text-align: center;
-    width: 520px;
+    width: 97%;
     border: none;
-    border-top: .5px solid grey;
+    border-top: 1px solid grey;
+    margin: 1px auto 40px auto;
 }
 
 .mission-content {
-    width: 35%;        
-    margin: 0 auto;
-    font-size: 18px;
+    max-width: 600px;
+    margin: 0 auto 40px auto;
 }
 
 .intro {
-    text-align: justify;
-    font-weight: normal;
-    margin-bottom: 15px;
+    text-align: left;
+    margin-bottom: 20px;
 }
 
 .points {
-    padding-left: 20px; 
+    padding-left: 20px;
     margin: 0;
-    font-weight: normal;
 }
 
 .points li {
-    text-align: justify;
-    margin-bottom: 10px;
+    text-align: left;
+    margin-bottom: 15px;
 }
+
 .footer-logo {
-    position: absolute;
-    bottom: 250px; 
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
-  }
-  
-  .footer-logo .logo {
-    width: 120px;  
-    height: auto;  
-  }
+    margin-top: 30px;
+}
+
+.footer-logo .logo {
+    width: 150px;
+    height: auto;
+}
