--- a/prove/mission/style.css
+++ b/prove/mission/style.css
@@ -7,25 +7,22 @@ body {
     justify-content: center;
     padding: 40px 0;
     line-height: 1.5;
+    position: relative;
 }
 
-.theme-selector-wrapper {
-    position: fixed;
+#theme-selector {
+    position: absolute;
     top: 20px;
     left: 20px;
-    z-index: 1000;
-}
-
-.theme-selector-wrapper select {
-    padding: 5px 10px;
     font-size: 16px;
+    padding: 5px 10px;
 }
 
 .border {
     border: 1px solid #ccc;
     width: 70%;
     max-width: 600px;
-    background: white;
+    background: #f2f2f2;
     padding: 70px 150px;
 }
 
@@ -34,7 +31,7 @@ body {
     font-weight: normal;
     font-size: 40px;
     margin-bottom: 10px;
-    margin-top: 20px;
+    margin-top: 0;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -89,16 +86,16 @@ body {
 
 .dark {
     background-color: #333;
-    color: #fff;         
+    color: #fff;
 }
 
 .dark .border {
     background-color: #333;
-    border-color: #aaa;
+    border-color: #fff;
 }
 
 .dark .sub-title {
-    color: #aad4ff; 
+    color: #aad4ff;
 }
 
 .dark p,
