--- a/ponder/media-query.css
+++ b/ponder/media-query.css
@@ -5,7 +5,7 @@ body {
 header, main, footer {
   max-width: 640px;
   margin: 1rem auto;
-  border: 1px solid #000;
+  border: 1px solid #ccc;
   padding: 1rem;
   background-color: #90e0ef
 }
